--- a/content/0.index.md
+++ b/content/0.index.md
@@ -15,34 +15,28 @@ cta:
   - /introduction/getting-started
 secondary:
   - Open on GitHub →
-  - https://github.com/nuxt-themes/docus
+  - https://github.com/LyuLumos/docus
 ---
 
 #title
-The best place to start your documentation.
+基于生成式大语言模型的智能助手
 
 #description
-Write pages in [Markdown](https://content.nuxtjs.org), use [Vue](https://vuejs.org) components and enjoy the power of [Nuxt](https://nuxt.com).
+在网页端/桌面端/移动端/命令行使用 [OpenAI ChatGPT](https://openai.com/chatgpt) / [GPT4](https://openai.com/gpt-4) / [Claude](https://www.anthropic.com/index/claude-2)等模型。
 
 #extra
   ::list
-  - **+50 Components** ready to build rich pages
-  - **Docs** and **Page** layouts
-  - Start from a `README`, scale to a framework documentation
-  - Navigation and Table of Contents generation
-  - Fully configurable design system
-  - Leverages [**Typography**](https://typography.nuxt.space/) and [**Elements**](https://elements.nuxt.dev)
-  - Used on [Content Documentation](https://content.nuxtjs.org)
+  - 支持多种AI模型，超乎想象的智能
+  - 无需注册，即点即用
+  - 简洁界面，极低性能占用
+  - 高度自定义
   ::
 
 #support
   ::terminal
   ---
   content:
-  - npx nuxi@latest init -t themes/docus
-  - cd docs
-  - npm install
-  - npm run dev
+  - pip install terminal-agent-x
   ---
   ::
 ::
@@ -55,45 +49,32 @@ What's included
 :ellipsis{left=0px width=40rem top=10rem blur=140px}
 
 #default
-  ::card{icon=logos:nuxt-icon}
+  ::card{icon=fluent-emoji:robot}
   #title
-  Nuxt Architecture
+  [ChatGPT API Demo](https://chatgpt.lyulumo.live/)
   #description
-  Harness the full power of [Nuxt 3](https://v3.nuxtjs.org) and its [modules](https://modules.nuxtjs.org) ecosystem.
+  使用 [ChatGPT API](https://openai.com/blog/openai-api) 与人工智能模型对话，极简界面，IoT设备友好。
   ::
 
-  ::card{icon=IconNuxtStudio}
+  ::card{icon=fluent-emoji-flat:glowing-star}
   #title
-  Nuxt Studio ready
+  [GPT4 Demo](https://gpt4.lyulumo.live/)
   #description
-  Edit your theme content and appearance with live-preview within [Nuxt Studio](https://nuxt.studio).
+  目前业界最强的[GPT-4](https://openai.com/gpt-4)模型，能够胜任更复杂的任务，支持自定义额度购买。
   ::
 
-  ::card{icon=logos:vue}
+  ::card{icon=fluent-emoji-flat:bubbles}
   #title
-  Vue Components
+  [ChatGPT Demo 2.0](https://chatv2.lyulumo.live/)
   #description
-  Use built-in components (or your own!) inside your content.
-  ::
-
-  ::card{icon=simple-icons:markdown}
-  #title
-  Write Markdown
-  #description
-  Enjoy the ease and simplicity of Markdown and discover [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
+  适配 [ChatGPT/GPT4/DALLE API](https://openai.com/blog/openai-api) 的新版界面，支持多种模型，用户端存储历史记录。
   ::
 
   ::card{icon=noto:rocket}
   #title
-  Deploy anywhere
+  [Terminal-Agent-X](https://pypi.org/project/terminal-agent-x/)
   #description
-  Zero config on [Vercel](https://vercel.com) or [Netlify](https://netlify.com). Choose between static generation, on-demand rendering (Node) or edge-side rendering on [CloudFlare workers](https://workers.cloudflare.com).
+  体积极小，适配Windows和Linux多类型终端，兼容OpenAI GPT-3.5/4s、DALL·E以及 Claude API的命令行工具。
   ::
 
-  ::card{icon=noto:puzzle-piece}
-  #title
-  Extensible.
-  #description
-  Customize the whole design, or add components using slots - you can make Docus your own.
-  ::
 ::
