--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,57 +1,43 @@
-# Getting Started
+# 使用说明
 
-From your Markdown files to a deployed website in few minutes.
+对于 `chat`/`chatv2`/`gpt4`，您可以直接在网页端使用，每个界面有对应设置的密码。如果有批量部署的需求，可以查看「部署」一节内容。
 
-## Play online
+此项目为非盈利性质，为个人项目，在不可控因素影响时可能会停止服务。
 
-You can start playing with Docus in your browser using Stackblitz:
+:button-link[Play]{size="small" color="blue" icon="IconStackBlitz" href="https://chatgpt.lyulumo.live/" blank}
+:button-link[Play]{size="small" color="orange" icon="IconStackBlitz" href="https://chatv2.lyulumo.live/" blank}
+:button-link[Play]{size="small" color="purple" icon="IconStackBlitz" href="https://gpt4.lyulumo.live/" blank}
 
-:button-link[Play on StackBlitz]{size="small" icon="IconStackBlitz" href="https://stackblitz.com/github/nuxt-themes/docus-starter" blank}
+## 访问与使用
 
-## Create a new project
+在各地通过浏览器均可访问。默认后台开启代理，如果您在美国等地区访问，可以联系关闭代理以提高速度。
 
-1. Start a fresh Docus project with:
+由于OpenAI等API Key价格的高昂，需要用户自行生成 key 并填入的设置中，或者也可以联系[此邮箱](mailto:3208413453@qq.com)购买预置的服务。
 
-```bash [npx]
-npx nuxi@latest init docs -t themes/docus
-```
+## 关于GPT-4
 
-2. Install the dependencies in the `docs` folder:
+目前使用 [one-api](https://github.com/songquanpeng/one-api) 切分 GPT4-API，GPT4的速度会慢于GPT3.5，购买后会单独发送给用户一个私有的key，将此key填入 `chatv2` 中或单独建站后，即可享受私人服务。此 key 具有额度上限，费用同OpenAI官方。
 
-::code-group
+::alert{type="info"}
+✨ 为了减少用户不必要的开销，此key被限制为仅可在本服务中调用 `gpt-4`。用户有自定义需要可以提出。
+::
 
-  ```bash [npm]
-  npm install
-  ```
 
-  ```bash [yarn]
-  yarn install
-  ```
+## 隐私安全
 
-  ```bash [pnpm]
-  pnpm install --shamefully-hoist
-  ```
+本项目不会收集任何用户聊天记录，所有对话记录均保存在用户本地，不会上传到服务器。
+
+具体来说，`chatv2` 的消息使用 `IndexedDB` 存储，你可以在浏览器的开发人员选项中，在「应用程序」-「存储」中找到本地保存的历史记录。这些消息无法被服务器看到，当然受限于这种存储方式，也无法做到多设备的消息同步。
+
+## 支持
+
+::list{type="success"}
+
+  - 网页端：请使用URL访问。
+  - 移动端：通过浏览器访问，可以通过浏览器自带的「书签」功能添加为桌面图标。界面进行了适配。
+  - 桌面端：请使用地址栏中的「安装为应用程序」功能，安装为PWA应用。
+  - 命令行：请使用 `terminal-agent-x`，兼容常见的终端。
 
 ::
 
-3. Run the `dev` command to start Docus in development mode:
 
-::code-group
-
-```bash [npm]
-npm run dev
-```
-
-```bash [yarn]
-yarn dev
-```
-
-```bash [pnpm]
-pnpm run dev
-```
-
-::
-
-::alert{type="success"}
-✨ Well done! A browser window should automatically open for <http://localhost:3000>
-::
