--- a/content/1.introduction/2.project-structure.md
+++ b/content/1.introduction/2.project-structure.md
@@ -1,21 +1,8 @@
-# Project Structure
+# 部署
 
-Docus is a Nuxt theme that provides a ready-to-use documentation website, if you are familiar with Nuxt, you will feel right at home.
+## 付费需求
 
-## Directory Structure
+支持以「实验室」或团体单位购买 `gpt-3.5-turbo` 和 `gpt-4` 额度，通过预置，架设的服务器在不需要输入API Key的情况下即可使用。如果您有这方面的需求，可以联系[此邮箱](mailto:3208413453@qq.com)。费用等同于OpenAI官方价格。
 
-This is the minimal directory structure to get an up and running Docus website.
+`chat`/`chatv2` 自2023年7月由 `CyberUnicon` 实验室支付产生的API费用，对实验室内部开放，目前的参考费用为 5元/月/人。
 
-```bash
-content/
-  index.md
-app.config.ts
-nuxt.config.ts
-```
-
-The `content/` directory is where you [write Markdown pages](/introduction/writing-pages).
-
-The `app.config.ts` is where you [configure Docus](/introduction/configuration) to fit your branding and design.
-
-
-The `nuxt.config.ts` is your [Nuxt configuration](https://nuxt.com/docs/getting-started/configuration).
