--- a/content/0.index.md
+++ b/content/0.index.md
@@ -19,7 +19,7 @@ secondary:
 ---
 
 #title
-基于生成式大语言模型的智能助手
+基于生成式大模型的智能助手
 
 #description
 在网页端/桌面端/移动端/命令行使用 [OpenAI ChatGPT](https://openai.com/chatgpt) / [GPT4](https://openai.com/gpt-4) / [Claude](https://www.anthropic.com/index/claude-2)等模型。
