--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,12 +1,12 @@
 # 使用说明
 
-对于 `chat`/`chatv2`/`gpt4`，您可以直接在网页端使用，每个界面有对应设置的密码。如果有批量部署的需求，可以查看「部署」一节内容。
+对于 `chat`/`chatv2`/`gpt4`，您可以直接在网页端使用，每个界面有对应设置的密码。如果有批量部署的需求，可以查看[部署](https://www.lyulumo.live/introduction/deploy)一节内容。
 
-此项目为非盈利性质，为个人项目，在不可控因素影响时可能会停止服务。
+此项目为非盈利性质个人项目，在不可控因素影响时可能会停止服务。
 
-:button-link[Play]{size="small" color="blue" icon="IconStackBlitz" href="https://chatgpt.lyulumo.live/" blank}
-:button-link[Play]{size="small" color="orange" icon="IconStackBlitz" href="https://chatv2.lyulumo.live/" blank}
-:button-link[Play]{size="small" color="purple" icon="IconStackBlitz" href="https://gpt4.lyulumo.live/" blank}
+:button-link[chat]{size="small" color="blue" icon="IconStackBlitz" href="https://chatgpt.lyulumo.live/" blank}
+:button-link[chatv2]{size="small" color="orange" icon="IconStackBlitz" href="https://chatv2.lyulumo.live/" blank}
+:button-link[gpt4]{size="small" color="purple" icon="IconStackBlitz" href="https://gpt4.lyulumo.live/" blank}
 
 ## 访问与使用
 
@@ -14,12 +14,23 @@
 
 由于OpenAI等API Key价格的高昂，需要用户自行生成 key 并填入的设置中，或者也可以联系[此邮箱](mailto:3208413453@qq.com)购买预置的服务。
 
+## 提示工程
+
+`chat`/`gpt4` 进行了提示工程增强，具有更接近 ChatGPT 网页版的能力。
+
+::code-block{label="Preview" preview}
+User: 今天几号？
+ChatGPT: 今天是2023年9月12日。
+::
+
+`chatv2` 聊天起始页增加了多种提示选项，可以更好地引导用户进行对话。也可以自定义添加提示。
+
 ## 关于GPT-4
 
 目前使用 [one-api](https://github.com/songquanpeng/one-api) 切分 GPT4-API，GPT4的速度会慢于GPT3.5，购买后会单独发送给用户一个私有的key，将此key填入 `chatv2` 中或单独建站后，即可享受私人服务。此 key 具有额度上限，费用同OpenAI官方。
 
 ::alert{type="info"}
-✨ 为了减少用户不必要的开销，此key被限制为仅可在本服务中调用 `gpt-4`。用户有自定义需要可以提出。
+✨ 为了减少用户不必要的开销，此key被限制为仅可在本服务中调用 `gpt-4`。用户有自定义需要可以定制。
 ::
 
 
@@ -27,7 +38,7 @@
 
 本项目不会收集任何用户聊天记录，所有对话记录均保存在用户本地，不会上传到服务器。
 
-具体来说，`chatv2` 的消息使用 `IndexedDB` 存储，你可以在浏览器的开发人员选项中，在「应用程序」-「存储」中找到本地保存的历史记录。这些消息无法被服务器看到，当然受限于这种存储方式，也无法做到多设备的消息同步。
+具体来说，`chatv2` 的消息使用 `IndexedDB` 存储，你可以通过浏览器的开发人员工具，在「应用程序」-「存储」中找到本地保存的历史记录。这些消息无法被服务器看到，当然受限于这种存储方式，也无法做到多设备的消息同步。
 
 ## 支持
 
