--- a/content/1.introduction/2.deploy.md
+++ b/content/1.introduction/2.deploy.md
@@ -6,3 +6,6 @@
 
 `chat`/`chatv2` 自2023年7月由 `CyberUnicon` 实验室支付产生的API费用，对实验室内部开放，目前的参考费用为 5元/月/人。
 
+## 协议
+
+[MIT](https://opensource.org/license/mit/)
