Update doc & fix bug

--- a/content/0.index.md
+++ b/content/0.index.md
@@ -37,6 +37,7 @@ secondary:
   ---
   content:
   - pip install terminal-agent-x
+  - tax write a sentiment analysis code using Pytorch
   ---
   ::
 ::
