--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -5,8 +5,8 @@
 此项目为非盈利性质个人项目，在不可控因素影响时可能会停止服务。
 
 :button-link[chat]{size="small" color="blue" icon="IconStackBlitz" href="https://chatgpt.lyulumo.live/" blank}
-:button-link[chatv2]{size="small" color="orange" icon="IconStackBlitz" href="https://chatv2.lyulumo.live/" blank}
-:button-link[gpt4]{size="small" color="purple" icon="IconStackBlitz" href="https://gpt4.lyulumo.live/" blank}
+:button-link[chatv2]{size="small" color="purple" icon="IconStackBlitz" href="https://chatv2.lyulumo.live/" blank}
+:button-link[gpt4]{size="small" color="orange" icon="IconStackBlitz" href="https://gpt4.lyulumo.live/" blank}
 
 ## 访问与使用
 
@@ -18,10 +18,10 @@
 
 `chat`/`gpt4` 进行了提示工程增强，具有更接近 ChatGPT 网页版的能力。
 
-::code-block{label="Preview" preview}
-User: 今天几号？
-ChatGPT: 今天是2023年9月12日。
-::
+```
+> 今天几号？
+< 今天是2023年9月12日。
+```
 
 `chatv2` 聊天起始页增加了多种提示选项，可以更好地引导用户进行对话。也可以自定义添加提示。
 
