--- a/content/0.index.md
+++ b/content/0.index.md
@@ -22,7 +22,7 @@ secondary:
 基于生成式大模型的智能助手
 
 #description
-在网页端/桌面端/移动端/命令行使用 [OpenAI ChatGPT](https://openai.com/chatgpt) / [GPT4](https://openai.com/gpt-4) / [Claude](https://www.anthropic.com/index/claude-2)等模型。
+在网页端/桌面端/移动端/命令行使用 OpenAI [ChatGPT](https://openai.com/chatgpt) / [GPT4](https://openai.com/gpt-4) / [Claude](https://www.anthropic.com/index/claude-2)等模型。
 
 #extra
   ::list
@@ -37,7 +37,6 @@ secondary:
   ---
   content:
   - pip install terminal-agent-x
-  - tax write a sentiment analysis code using Pytorch
   ---
   ::
 ::
@@ -52,30 +51,30 @@ What's included
 #default
   ::card{icon=fluent-emoji:robot}
   #title
-  [ChatGPT API Demo](https://chatgpt.lyulumo.live/)
+  [**ChatGPT API Demo**](https://chatgpt.lyulumo.live/)
   #description
   使用 [ChatGPT API](https://openai.com/blog/openai-api) 与人工智能模型对话，极简界面，IoT设备友好。
   ::
 
   ::card{icon=fluent-emoji-flat:glowing-star}
   #title
-  [GPT4 Demo](https://gpt4.lyulumo.live/)
+  [**GPT4 Demo**](https://gpt4.lyulumo.live/)
   #description
   目前业界最强的[GPT-4](https://openai.com/gpt-4)模型，能够胜任更复杂的任务，支持自定义额度购买。
   ::
 
   ::card{icon=fluent-emoji-flat:bubbles}
   #title
-  [ChatGPT Demo 2.0](https://chatv2.lyulumo.live/)
+  [**ChatGPT Demo 2.0**](https://chatv2.lyulumo.live/)
   #description
   适配 [ChatGPT/GPT4/DALLE API](https://openai.com/blog/openai-api) 的新版界面，支持多种模型，用户端存储历史记录。
   ::
 
   ::card{icon=noto:rocket}
   #title
-  [Terminal-Agent-X](https://pypi.org/project/terminal-agent-x/)
+  [**Terminal Agent X**](https://pypi.org/project/terminal-agent-x/)
   #description
-  体积极小，适配Windows和Linux多类型终端，兼容OpenAI GPT-3.5/4s、DALL·E以及 Claude API的命令行工具。
+  体积极小，适配Windows和Linux多类型终端，兼容OpenAI GPT3.5/4、DALL·E以及 Claude API的命令行工具。
   ::
 
 ::
