--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,6 +1,6 @@
 # 使用说明
 
-对于 `chat`/`chatv2`/`gpt4`，您可以直接在网页端使用，每个界面有对应设置的密码。如果有批量部署的需求，可以查看[部署](https://www.lyulumo.live/introduction/deploy)一节内容。
+对于 `chat`/`chatv2`/`gpt4`，您可以直接在网页端使用，每个界面有对应设置的密码。如果有批量部署的需求请查看[部署](https://www.lyulumo.live/introduction/deploy)。
 
 此项目为非盈利性质个人项目，在不可控因素影响时可能会停止服务。
 
@@ -10,13 +10,13 @@
 
 ## 访问与使用
 
-在各地通过浏览器均可访问。默认后台开启代理，如果您在美国等地区访问，可以联系关闭代理以提高速度。
+在世界各地通过浏览器均可访问。默认后台开启代理，如果您在美国等地区访问，可以联系关闭代理以提高加载速度。
 
-由于OpenAI等API Key价格的高昂，需要用户自行生成 key 并填入的设置中，或者也可以联系[此邮箱](mailto:3208413453@qq.com)购买预置的服务。
+由于OpenAI等API Key价格的高昂，需要用户自行[生成 key](https://platform.openai.com/account/api-keys) 并填入的设置中，也可以联系[此邮箱](mailto:3208413453@qq.com)购买预置服务。
 
 ## 提示工程
 
-`chat`/`gpt4` 进行了提示工程增强，具有更接近 ChatGPT 网页版的能力。
+`chat`/`gpt4` 进行了**提示工程增强**，具有更接近 ChatGPT 网页版的能力。
 
 ```
 > 今天几号？
@@ -27,11 +27,15 @@
 
 ## 关于GPT-4
 
-目前使用 [one-api](https://github.com/songquanpeng/one-api) 切分 GPT4-API，GPT4的速度会慢于GPT3.5，购买后会单独发送给用户一个私有的key，将此key填入 `chatv2` 中或单独建站后，即可享受私人服务。此 key 具有额度上限，费用同OpenAI官方。
+目前使用 [one-api](https://github.com/songquanpeng/one-api) 切分 GPT4-API，GPT4的速度会慢于GPT3.5，购买后会单独发送给用户一个私有的key，将此key填入 `chatv2` 中或单独建站后，即可享受私人服务，根据用量单独付费。此 key 具有额度上限，费用依据OpenAI官方。
 
 ::alert{type="info"}
-✨ 为了减少用户不必要的开销，此key被限制为仅可在本服务中调用 `gpt-4`。用户有自定义需要可以定制。
+✨ 为了减少用户不必要的开销，此key被限制为仅可在本服务中调用 `gpt-4`。用户若有需要可以定制。
 ::
+
+## 速率限制
+
+正常情况下，`gpt-3.5-turbo` 单API的请求速率上限为 3500次/分钟，由于采用了分布式负载均衡，实际速率上限会高于此值。`gpt-4` 单API的请求速率上限为 200 次/分钟。GPT4 API不受官方网页版 `50次/3h` 的速率限制。
 
 
 ## 隐私安全
