--- a/content/1.introduction/2.deploy.md
+++ b/content/1.introduction/2.deploy.md
@@ -2,9 +2,9 @@
 
 ## 付费需求
 
-支持以「实验室」或团体单位购买 `gpt-3.5-turbo` 和 `gpt-4` 额度，通过预置，架设的服务器在不需要输入API Key的情况下即可使用。如果您有这方面的需求，可以联系[此邮箱](mailto:3208413453@qq.com)。费用等同于OpenAI官方价格。
+支持以个人或团体单位购买 `gpt-3.5-turbo` 和 `gpt-4` 额度，通过预置，架设的服务器在不需要输入API Key的情况下即可使用。如果您有这方面的需求，可以联系[此邮箱](mailto:3208413453@qq.com)。费用依据OpenAI官方价格。
 
-`chat`/`chatv2` 自2023年7月由 `CyberUnicon` 实验室支付产生的API费用，对实验室内部开放，目前的参考费用为 5元/月/人。
+`chat`/`chatv2` 自2023年7月由 `CyberUnicorn` 实验室支付产生的API费用，对实验室内部开放，目前的参考费用为 5元/月/人。
 
 ## 协议
 
