add API Key池与负载均衡

--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -37,12 +37,22 @@
 
 正常情况下，`gpt-3.5-turbo` 单API的请求速率上限为 3500次/分钟，由于采用了分布式负载均衡，实际速率上限会高于此值。`gpt-4` 单API的请求速率上限为 200 次/分钟。GPT4 API不受官方网页版 `50次/3h` 的速率限制。
 
+## API key池与负载均衡
+
+:badge[Work in progress]{type="warning"}
+
+目前，所有服务均采用API key池，随机选取key进行通信以保证服务的可用性。
+
+`chatv2` 在此基础上增加了负载均衡，根据key的使用情况，自动调整API key的使用频率，以保证用户的体验。
+
 
 ## 隐私安全
 
 本项目不会收集任何用户聊天记录，所有对话记录均保存在用户本地，不会上传到服务器。
 
 具体来说，`chatv2` 的消息使用 `IndexedDB` 存储，你可以通过浏览器的开发人员工具，在「应用程序」-「存储」中找到本地保存的历史记录。这些消息无法被服务器看到，当然受限于这种存储方式，也无法做到多设备的消息同步。
+
+而 `chat`/`gpt-4` 使用 `sessionStorage` 用于本地存储单个会话中的数据，这些数据只有在同一个会话中的页面才能访问，并且当会话结束后数据也随之销毁。
 
 ## 支持
 
