add status & fix bug

--- a/content/0.index.md
+++ b/content/0.index.md
@@ -77,4 +77,11 @@ What's included
   体积极小，适配Windows和Linux多类型终端，兼容OpenAI GPT3.5/4、DALL·E以及 Claude API的命令行工具。
   ::
 
+  ::card{icon=noto:antenna-bars}
+  #title
+  [Status](https://stats.uptimerobot.com/PkmmNsv5OB)
+  #description
+  服务状态与API可用性监控。
+  ::
+
 ::
