--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -39,7 +39,7 @@
 
 ## API key池与负载均衡
 
-:badge[Work in progress]{type="warning"}
+:badge[Work in Progress]{type="warning"}
 
 目前，所有服务均采用API key池，随机选取key进行通信以保证服务的可用性。
 
